Update newsletter with Change Foods and Bolt Threads news
Added updates on Change Foods and Bolt Threads in the newsletter, highlighting their funding and production expansion efforts.

--- a/content/newsletters/2025-11-24_04-01-25/2025-11-24_en.md
+++ b/content/newsletters/2025-11-24_04-01-25/2025-11-24_en.md
@@ -18,3 +18,4 @@ This week's Vegan BioTech Report highlights significant advancements in sustaina
 *   **Bolt Threads** (Impact: 7) – 10 Sep 2025 – Bolt Threads is expanding its production capabilities for Mylo, its innovative mushroom-based leather alternative, in response to increasing market demand. [Link](https://www.google.com/search?q=Bolt+Threads+Mylo+production+expansion)
 
 This week marks a period of significant growth and investment in the vegan biotech sector, particularly in scaling production and expanding market reach. Keep an eye on the adoption rates of these new materials and food alternatives as they become more widely available.
+<!--more-->
