feat: Add featured images to various content pages and include new image assets.

--- a/content/newsletters/2025-12-05_19-30-14/2025-12-05_en.md
+++ b/content/newsletters/2025-12-05_19-30-14/2025-12-05_en.md
@@ -1,6 +1,7 @@
 ---
 title: "Vegan BioTech Report – Edition 05 Dec 2025"
 date: 2025-12-05
+featured_image: "/images/precision_fermentation.png"
 description: "This week's Vegan BioTech Report highlights major advancements in alternative proteins and sustainable materials. Several companies are scaling up production of animal-free foods and textiles, marking a significant step towards a more sustainable future."
 ---
 
