--- a/content/newsletters/2025-11-24_04-01-25/2025-11-24_en.md
+++ b/content/newsletters/2025-11-24_04-01-25/2025-11-24_en.md
@@ -1,6 +1,7 @@
 ---
 title: "Vegan BioTech Report – Edition 24 Nov 2025"
 date: 2025-11-24
+featured_image: "/images/air_protein.png"
 description: "This week's Vegan BioTech Report highlights significant advancements in sustainable food and materials. From the opening of the first commercial Solein plant to major investments in bio-based cement and textiles, the industry is demonstrating remarkable progress in scaling up innovative vegan technologies."
 ---
 
