feat(lang): Implement robust language filtering and prev/next navigation

--- a/content/newsletters/2025-11-24_04-01-25/2025-11-24_nl.md
+++ b/content/newsletters/2025-11-24_04-01-25/2025-11-24_nl.md
@@ -1,8 +1,12 @@
 ---
-title: "Vegan BioTech Report – Editie 24 Nov 2025"
 date: 2025-11-24
-featured_image: "/images/air_protein.png"
-description: "Deze week zien we baanbrekende ontwikkelingen in de veganistische biotechnologie, met name op het gebied van duurzame voedselproductie en materialen. Van de opening van een commerciële Solein-fabriek tot aanzienlijke investeringen in alternatieve cementproductie, de toekomst ziet er rooskleurig uit."
+description: Deze week zien we baanbrekende ontwikkelingen in de veganistische biotechnologie,
+  met name op het gebied van duurzame voedselproductie en materialen. Van de opening
+  van een commerciële Solein-fabriek tot aanzienlijke investeringen in alternatieve
+  cementproductie, de toekomst ziet er rooskleurig uit.
+featured_image: /images/air_protein.png
+language: nl
+title: Vegan BioTech Report – Editie 24 Nov 2025
 ---
 
 # Vegan BioTech Report – Editie 24 Nov 2025
