--- a/content/newsletters/2025-12-05_19-30-14/2025-12-05_nl.md
+++ b/content/newsletters/2025-12-05_19-30-14/2025-12-05_nl.md
@@ -1,8 +1,12 @@
 ---
-title: "Vegan BioTech Report – Editie 05 Dec 2025"
 date: 2025-12-05
-featured_image: "/images/precision_fermentation.png"
-description: "Deze week zien we grote stappen voorwaarts in de veganistische biotechnologie, met name in de productie van diervrije eiwitten en duurzame materialen. Innovatieve bedrijven breiden hun productiecapaciteit uit en ontvangen financiering om de toekomst van voeding en textiel te veranderen."
+description: Deze week zien we grote stappen voorwaarts in de veganistische biotechnologie,
+  met name in de productie van diervrije eiwitten en duurzame materialen. Innovatieve
+  bedrijven breiden hun productiecapaciteit uit en ontvangen financiering om de toekomst
+  van voeding en textiel te veranderen.
+featured_image: /images/precision_fermentation.png
+language: nl
+title: Vegan BioTech Report – Editie 05 Dec 2025
 ---
 
 # Vegan BioTech Report – Editie 05 Dec 2025
