--- a/content/newsletters/2025-12-09_23-45-39/2025-12-09_en.md
+++ b/content/newsletters/2025-12-09_23-45-39/2025-12-09_en.md
@@ -1,4 +1,5 @@
 ---
+archived: true
 date: 2025-12-09
 description: This week's Vegan BioTech Report highlights an unprecedented surge in
   market adoption and technological maturity, showcasing how vegan biotech is rapidly
@@ -6,10 +7,9 @@ description: This week's Vegan BioTech Report highlights an unprecedented surge 
   partnerships to significant funding rounds and cost parity achievements, the sector
   is clearly accelerating its global impact.
 featured_image: /images/2025-12-09_en.png
+language: en
 title: Vegan BioTech Report – Edition 09 Dec 2025
-archived: true
 ---
-
 
 # Vegan BioTech Report – Edition 09 Dec 2025
 
