--- a/content/newsletters/2025-12-09_23-45-39/2025-12-09_nl.md
+++ b/content/newsletters/2025-12-09_23-45-39/2025-12-09_nl.md
@@ -1,14 +1,14 @@
 ---
+archived: true
 date: 2025-12-09
 description: Deze week markeert belangrijke mijlpalen in de veganistische biotechnologie,
   met regelgevende goedkeuringen die nieuwe markten openen en aanzienlijke partnerschappen
   en investeringen die de sector stimuleren. De industrie schaalt snel op en brengt
   innovatieve, duurzame oplossingen naar zowel consumenten als bedrijven wereldwijd.
 featured_image: /images/2025-12-09_nl.png
+language: nl
 title: Vegan BioTech Report – Editie 09 Dec 2025
-archived: true
 ---
-
 
 # Vegan BioTech Report – Editie 09 Dec 2025
 
