--- a/content/newsletters/2025-12-05_19-30-14/2025-12-05_en.md
+++ b/content/newsletters/2025-12-05_19-30-14/2025-12-05_en.md
@@ -1,8 +1,12 @@
 ---
-title: "Vegan BioTech Report – Edition 05 Dec 2025"
 date: 2025-12-05
-featured_image: "/images/precision_fermentation.png"
-description: "This week's Vegan BioTech Report highlights major advancements in alternative proteins and sustainable materials. Several companies are scaling up production of animal-free foods and textiles, marking a significant step towards a more sustainable future."
+description: This week's Vegan BioTech Report highlights major advancements in alternative
+  proteins and sustainable materials. Several companies are scaling up production
+  of animal-free foods and textiles, marking a significant step towards a more sustainable
+  future.
+featured_image: /images/precision_fermentation.png
+language: en
+title: Vegan BioTech Report – Edition 05 Dec 2025
 ---
 
 # Vegan BioTech Report – Edition 05 Dec 2025
