--- a/content/newsletters/2025-12-09_22-45-49/2025-12-09_en.md
+++ b/content/newsletters/2025-12-09_22-45-49/2025-12-09_en.md
@@ -6,6 +6,7 @@ description: This week, the vegan biotech sector saw significant advancements in
   leather alternatives, the industry continues to push boundaries in sustainability
   and scalability.
 featured_image: /images/2025-12-09_en.png
+language: en
 title: Vegan BioTech Report – Edition 09 Dec 2025
 ---
 
