Update featured image in newsletter markdown

--- a/content/newsletters/2025-12-09_23-45-39/2025-12-09_en.md
+++ b/content/newsletters/2025-12-09_23-45-39/2025-12-09_en.md
@@ -6,7 +6,7 @@ description: This week's Vegan BioTech Report highlights an unprecedented surge 
   transforming industries. From landmark regulatory approvals and strategic corporate
   partnerships to significant funding rounds and cost parity achievements, the sector
   is clearly accelerating its global impact.
-featured_image: /images/2025-12-09_en.png
+featured_image: /images/precision_fermentation.png
 language: en
 title: Vegan BioTech Report – Edition 09 Dec 2025
 ---
