Update featured image in newsletter markdown

--- a/content/newsletters/2025-12-09_22-45-49/2025-12-09_en.md
+++ b/content/newsletters/2025-12-09_22-45-49/2025-12-09_en.md
@@ -5,7 +5,7 @@ description: This week, the vegan biotech sector saw significant advancements in
   expansion, and sustainable production. From cultivated meat breakthroughs to innovative
   leather alternatives, the industry continues to push boundaries in sustainability
   and scalability.
-featured_image: /images/2025-12-09_en.png
+featured_image: /images/precision_fermentation.png
 language: en
 title: Vegan BioTech Report – Edition 09 Dec 2025
 ---
