Change featured image in newsletter
Updated featured image for the Vegan BioTech Report.

--- a/content/newsletters/2025-12-05_19-30-14/2025-12-05_en.md
+++ b/content/newsletters/2025-12-05_19-30-14/2025-12-05_en.md
@@ -4,7 +4,7 @@ description: This week's Vegan BioTech Report highlights major advancements in a
   proteins and sustainable materials. Several companies are scaling up production
   of animal-free foods and textiles, marking a significant step towards a more sustainable
   future.
-featured_image: /images/precision_fermentation.png
+featured_image: /images/air_protein.png
 language: en
 title: Vegan BioTech Report – Edition 05 Dec 2025
 ---
